--- a/css/_header.scss
+++ b/css/_header.scss
@@ -7,6 +7,8 @@
             align-items: center;
             justify-content: end;
             margin: 0;
+            position: relative;
+            z-index: 999;
 
             @include respond-below(sm) {
                 justify-content: center;
@@ -16,7 +18,7 @@
             li {
                 background: $brand-color;
                 list-style-type: none;
-                padding: 25px 20px 13px 20px;
+                padding: 15px 20px 13px 20px;
 
                 @include respond-below(lg) {
                     padding: 13px 20px 13px 20px;
