--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 @import "about";
 @import "specialized";
 @import "watching";
-@import "bigleap-video";
+@import "key-projects-area";
 @import "motion";
 @import "animate-bus";
 // @import "testimonials";
