--- a/css/_key-projects-area.scss
+++ b/css/_key-projects-area.scss
@@ -1,4 +1,4 @@
-.bigleap-video-area {
+.key-projects-area {
     position: relative;
     @include section;
 
@@ -23,9 +23,7 @@
 
                 .content {
                     position: absolute;
-                    left: 70px;
-                    right: 0;
-                    padding-top: 180px;
+                    left: 0px;
 
                     @include respond-below(xl) {
                         padding-top: 0;
@@ -81,6 +79,7 @@
                 }
 
                 .videos {
+                    width: 75%;
                     // padding-left: 350px;
 
                     @include respond-below(lg) {
@@ -88,32 +87,41 @@
                     }
 
                     @include respond-below(md) {
-                        padding-left: 0;
+                        width: 100%;
+                        height: auto;
+
+                    }
+
+                    @include respond-below(sm) {
+                        width: 100%;
+                        height: auto;
+
                     }
 
                     iframe {
-                        width: 780px;
-                        height: 515px;
+                        width: 100%;
+                        height: 620px;
 
                         @include respond-below(xl) {
-                            width: 780px;
+                            width: 100%;
+                            height: 470px;
 
                         }
 
                         @include respond-below(lg) {
-                            width: 720px;
-                            height: 475px;
+                            width: 100%;
+                            height: 400px;
                         }
 
                         @include respond-below(md) {
-                            width: 670px;
-                            height: 385px;
+                            width: 100%;
+                            height: 390px;
 
                         }
 
                         @include respond-below(sm) {
-                            width: 350px;
-                            height: 345px;
+                            width: 100%;
+                            height: 205px;
 
                         }
 
