--- a/css/_specialized.scss
+++ b/css/_specialized.scss
@@ -11,9 +11,17 @@
         z-index: -1;
         opacity: 0.3;
 
+        display: inline-block;
+        padding: 10px;
+        background: linear-gradient(#040303, #0f0e0e) padding-box, linear-gradient(to right, transparent, #000, #0f0e0e) border-box;
+        transition: all 0.5s ease;
+
+
         img {
-            width: 100%;
-            height: auto;
+
+            display: block;
+            max-width: 100%;
+            height: 100%;
         }
     }
 
