--- a/css/_watching.scss
+++ b/css/_watching.scss
@@ -1,4 +1,7 @@
 .watch-area {
+    @include section;
+    position: relative;
+
     .first-video {
         display: flex;
         flex-direction: column;
@@ -6,7 +9,7 @@
         gap: 20px;
 
         @include respond-below(lg) {
-            flex-direction: row;
+            flex-direction: column;
         }
 
         @include respond-below(md) {
@@ -19,34 +22,34 @@
         }
 
         .video1 {
-            @include respond-below(lg) {
-                width: 100%;
-            }
+            width: 100%;
+            height: 100%;
 
             iframe {
-                width: 650px;
-                height: 270px;
+                width: 100%;
+                height: 400px;
+
+                @include respond-below(xl) {
+                    height: 320px;
+                }
 
                 @include respond-below(lg) {
-                    width: 530px;
-                    height: 300px;
+                    height: 260px;
                 }
 
                 @include respond-below(md) {
-                    width: 100%;
                     height: 390px;
                 }
 
                 @include respond-below(sm) {
                     width: 100%;
+                    height: 200px;
                 }
             }
         }
 
         .video2 {
-            width: 70%; // You can adjust the size here
-
-            
+            width: 70%;
 
             @include respond-below(md) {
                 width: 100%;
@@ -58,18 +61,38 @@
 
             iframe {
                 width: 100%;
-                height: 210px;
+                height: 300px;
+
+                @include respond-below(xl) {
+                    height: 220px;
+                }
+
+                @include respond-below(lg) {
+                    height: 180px;
+                }
 
                 @include respond-below(md) {
-                    width: 688px;
                     height: 390px;
                 }
 
                 @include respond-below(sm) {
                     width: 100%;
+                    height: 200px;
                 }
 
             }
+        }
+    }
+
+    .shape {
+        position: absolute;
+        top: -770px;
+        right: 0;
+
+        img {
+            width: 100%;
+            height: auto;
+            opacity: .5;
         }
     }
 
@@ -81,7 +104,7 @@
         height: 100%;
 
         @include respond-below(lg) {
-            flex-direction: row;
+            flex-direction: column;
             padding-top: 40px;
         }
 
@@ -117,35 +140,38 @@
         }
 
         .video3 {
-           
-            @include respond-below(md) {
-                width: 100%;
-            }
-
-            @include respond-below(sm) {
-                width: 100%;
-            }
+            width: 100%;
 
             iframe {
-                width: 530px;
-                height: 250px;
+                width: 100%;
+                height: 400px;
+
+                @include respond-below(xl) {
+                    height: 310px;
+                }
 
                 @include respond-below(lg) {
-                    width: 630px;
+                    height: 230px;
                 }
 
                 @include respond-below(md) {
-                    width: 100%;
                     height: 390px;
                 }
 
                 @include respond-below(sm) {
-                    width: 360px;
+                    height: 200px;
                 }
             }
         }
 
 
+    }
+
+    .odr {
+
+        @include respond-below(md) {
+            order: -1;
+        }
     }
 
 }
